# ChangeLog for dev-python/pyopenssl
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopenssl/ChangeLog,v 1.24 2009/02/09 21:40:27 pva Exp $

  09 Feb 2009; Peter Volkov <pva@gentoo.org> Manifest:
  Fixed manifest, it was updated upstream on 2008-06-04. Take a look at
  release announcement. It was updated too.

*pyopenssl-0.8 (04 Feb 2009)

  04 Feb 2009; Patrick Lauer <patrick@gentoo.org> +pyopenssl-0.8.ebuild:
  Bump to 0.8, fixes #257594

*pyopenssl-0.7 (16 Apr 2008)

  16 Apr 2008; Ali Polatel <hawking@gentoo.org>
  +files/pyopenssl-0.7-test.patch, pyopenssl-0.5.1.ebuild,
  pyopenssl-0.6.ebuild, +pyopenssl-0.7.ebuild:
  Version bump. Added src_test. Quoting.

  23 Nov 2007; Ali Polatel <hawking@gentoo.org> pyopenssl-0.5.1.ebuild,
  pyopenssl-0.6.ebuild:
  switched tetex USE to doc wrt #196745

  05 Mar 2007; Marius Mauch <genone@gentoo.org> pyopenssl-0.5.1.ebuild,
  pyopenssl-0.6.ebuild:
  Replacing einfo with elog

  25 Sep 2006; Javier Villavicencio <the_paya@gentoo.org>
  pyopenssl-0.6-r1.ebuild:
  Add ~x86-fbsd keyword.

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  pyopenssl-0.6.ebuild:
  hppa stable, bug #139612

*pyopenssl-0.6-r1 (01 Jul 2006)

  01 Jul 2006; Marien Zwart <marienz@gentoo.org> +pyopenssl-0.6-r1.ebuild:
  Rename tetex USE flag to doc, thanks to nattfodd for reporting. Minor ebuild
  cleanup.

  21 May 2006; Markus Rothe <corsair@gentoo.org> pyopenssl-0.6.ebuild:
  Stable on ppc64

  12 May 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  pyopenssl-0.6.ebuild:
  Added ~hppa

  01 May 2006; Markus Rothe <corsair@gentoo.org> pyopenssl-0.6.ebuild:
  Added ~ppc64

  17 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org> pyopenssl-0.6.ebuild:
  Stable on sparc

  03 Oct 2005; Aron Griffis <agriffis@gentoo.org> pyopenssl-0.6.ebuild:
  Mark 0.6 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> pyopenssl-0.6.ebuild:
  add ~ia64
