@@ -2,8 +2,10 @@ AUX pyopenssl-0.7-test.patch 728 RMD160 5ce55981a55e43dd061cca76945acb6eedf89c71
 DIST pyOpenSSL-0.6.tar.gz 281910 RMD160 cea4f15671eeb721883a741dd01877550a4a4f5c SHA1 a9626095db201eeac979d0624101f5afa888f9b6 SHA256 5f8bee99cc78f1e6c01832582ed1ea5cf344d629d55100d6a0a430a1545dc0a1
 DIST pyOpenSSL-0.7.tar.gz 189022 RMD160 a3d208705bd9d495eb7c20f9306e568b71fe95fc SHA1 bd072fef8eb36241852d25a9161282a051f0a63e SHA256 7d53b7277771f21efb7775bedbaa6f72f5509423e16d08b62e3328b3991db255
 DIST pyOpenSSL-0.8.tar.gz 193035 RMD160 daacaab96c45aadca25f8aa39238a12d1907ddaa SHA1 50f4214dc18d8b90b9c6a7f50d6c004edad997eb SHA256 2284411d21f1031f08f23c4f49dc0a341e38b07833495d0fe21a87eb25f3ffe3
+DIST pyOpenSSL-0.9.tar.gz 197981 RMD160 fec72e02a922ffb37a9c66ed809c573b778138db SHA1 d39eeb26c73e4b96804e1e403e2136062910b6c2 SHA256 7089f1d47ce74480325411d34a31e3747175980889d99d2e1180f16d123251ab
 EBUILD pyopenssl-0.6-r1.ebuild 1229 RMD160 3e8d30f3e37e3211a5228643d23d835c962b1d87 SHA1 a582d374a8bf885f98b9d3f0e924b16ea3a9973d SHA256 4a221e94c818b6ed57c0d151103d7b5283460caa2041f6da417ba40c75b3ae5f
 EBUILD pyopenssl-0.7.ebuild 1517 RMD160 ba2185a80e1b476425386d838465bf279071bcb6 SHA1 1972ce36a4042c7fc04d8ec440432b6131939aa6 SHA256 faee6b64d3406409913395d8e58ceb0a8712613557e8d6f3d8c887689a557731
 EBUILD pyopenssl-0.8.ebuild 1438 RMD160 976c3322f0d1522d2fdadfb72f8f9b3a0c83e65e SHA1 f2be6e1a0cd30620a693e042de91c1b9bc0ccbfc SHA256 17c6d971eacdd9d4c7b59640c91925c7ac8e7a094c218f3a306492a9b2ae8459
-MISC ChangeLog 3868 RMD160 56d53dc73171c15c4d0ca69a6d5f1a1e46eca067 SHA1 873e4337dcf96e3ede1e746b21a22096ff99ca43 SHA256 0929b999e3f513dd3c7e7bce44beff2959898d86bf9dca8a0fe3b5c2a64f87fc
+EBUILD pyopenssl-0.9.ebuild 1414 RMD160 dcf5860c9e0e59e93f4cedd42387b5beb1875b4c SHA1 9ab8081ea2a52750f7d11c9d7688df34208aa871 SHA256 4b40d32689ffca01ccd90df09225ac27a6a112e085f0ad13edb30f304cb62f5d
+MISC ChangeLog 4018 RMD160 dbc304b7ac02740b683e1997af9a6b2d977a8f5e SHA1 1bcb64f05c6fd606ed1a5f5482ea96ae1dd73ac9 SHA256 674598d7679768b40382cb7a4e275c30e73e42d978a46161d870052f8240a068
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
