@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/pyopenssl
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopenssl/ChangeLog,v 1.24 2009/02/09 21:40:27 pva Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopenssl/ChangeLog,v 1.25 2009/05/16 23:26:08 arfrever Exp $
+
+*pyopenssl-0.9 (16 May 2009)
+
+  16 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +pyopenssl-0.9.ebuild:
+  Version bump.
 
   09 Feb 2009; Peter Volkov <pva@gentoo.org> Manifest:
   Fixed manifest, it was updated upstream on 2008-06-04. Take a look at
